--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 
 <script>
   const whitelist = [
-    { username: "johndoe", password: "password123" },
-    { username: "janedoe", password: "letmein456" },
-    { username: "supervisor", password: "admin789" }
+    { username: "sameenyaser", password: "1234" }
   ];
 
   function login() {
@@ -77,3 +75,4 @@
 
 </body>
 </html>
+
