--- a/incident-report.html
+++ b/incident-report.html
@@ -5,274 +5,262 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KPI Dashboards Menu</title>
   <style>
-    /* Reset and Global Styles */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
+/* Reset & Base */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f2f5f3;
-      color: #2e3e2f;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      padding: 60px 20px 40px;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: #f0f3f2;
+  color: #2e3e2f;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  padding: 60px 20px 40px;
+}
 
-    main {
-      background: #fff;
-      max-width: 900px;
-      width: 100%;
-      padding: 48px 40px 56px;
-      border-radius: 14px;
-      box-shadow: 0 8px 24px rgba(46, 62, 47, 0.1);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+main {
+  background: #fff;
+  max-width: 880px;
+  width: 100%;
+  padding: 48px 40px;
+  border-radius: 16px;
+  box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
 
-    /* Header */
-    header {
-      text-align: center;
-      margin-bottom: 48px;
-      user-select: none;
-    }
+header h1 {
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: #2a4d3a;
+  text-align: center;
+  margin-bottom: 8px;
+  letter-spacing: 0.04em;
+}
 
-    h1 {
-      font-weight: 700;
-      font-size: 2.4rem;
-      color: #2a4d3a;
-      margin: 0;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      line-height: 1.2;
-    }
+/* Section Styling */
+section {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #3e4e3f;
+}
+
+section h2 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  color: #2a4d3a;
+}
+
+/* Button: Report */
+#reportBtn {
+  background: #3a7d44;
+  color: white;
+  padding: 12px 32px;
+  border: none;
+  border-radius: 28px;
+  font-weight: 600;
+  font-size: 1rem;
+  letter-spacing: 0.05em;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.15s ease;
+  box-shadow: 0 4px 12px rgba(58, 125, 68, 0.3);
+}
+
+#reportBtn:hover {
+  background: #2a5931;
+  transform: translateY(-2px);
+}
+
+/* Logout */
+.logout-btn {
+  background: #f44336;
+  color: white;
+  border: none;
+  padding: 12px 28px;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 30px;
+  align-self: center;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.logout-btn:hover {
+  background: #d32f2f;
+  transform: translateY(-2px);
+}
+
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(42, 77, 58, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  padding: 32px 20px;
+  z-index: 1000;
+  backdrop-filter: blur(4px);
+}
+
+.modal-overlay.active {
+  display: flex;
+}
+
+/* Modal Box */
+.modal {
+  background-color: #ffffff;
+  border-radius: 16px;
+  width: 100%;
+  max-width: 500px;
+  max-height: 90vh;
+  overflow-y: auto;
+  padding: 36px 32px;
+  position: relative;
+  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.15);
+}
+
+.modal h2 {
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: #3a7d44;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+/* Close Button */
+.close-modal-btn {
+  position: absolute;
+  top: 14px;
+  right: 20px;
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  color: #3a7d44;
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+
+.close-modal-btn:hover {
+  color: #1f3a2a;
+}
+
+/* Form Fields */
+form label {
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: #4a5e4a;
+  margin-bottom: 6px;
+  display: inline-block;
+}
+
+input[type="text"],
+textarea {
+  padding: 12px 14px;
+  border-radius: 10px;
+  border: 1.5px solid #cbd5d1;
+  width: 100%;
+  font-size: 1rem;
+  background: #fdfdfd;
+  transition: all 0.3s ease;
+}
+
+input:focus,
+textarea:focus {
+  border-color: #3a7d44;
+  box-shadow: 0 0 8px rgba(58, 125, 68, 0.3);
+  outline: none;
+}
+
+input[readonly] {
+  background-color: #f4f7f5;
+  color: #6b7a6a;
+}
+
+/* Submit Button */
+form button[type="submit"] {
+  background: #3a7d44;
+  color: white;
+  border: none;
+  padding: 14px;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 30px;
+  margin-top: 10px;
+  cursor: pointer;
+  box-shadow: 0 4px 14px rgba(58, 125, 68, 0.35);
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+
+form button[type="submit"]:hover {
+  background: #2a5931;
+  transform: translateY(-2px);
+}
+
+/* Capture Image Area */
+video,
+img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
+
+#captureBtn,
+#retakeBtn {
+  background: #3a7d44;
+  color: white;
+  border: none;
+  padding: 10px 22px;
+  font-weight: 600;
+  border-radius: 24px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.15s ease;
+}
+
+#retakeBtn {
+  background: #607d3b;
+}
+
+#captureBtn:hover,
+#retakeBtn:hover {
+  transform: translateY(-2px);
+}
+
+/* Responsive */
+@media (max-width: 600px) {
+  main {
+    padding: 32px 24px;
+  }
+
+  header h1 {
+    font-size: 1.8rem;
+  }
+
+  .modal {
+    padding: 24px;
+  }
+
+  .modal h2 {
+    font-size: 1.4rem;
+  }
+
+  .logout-btn,
+  #reportBtn {
+    width: 100%;
+  }
+}
 
 
-    .logout-btn {
-      background: #2a4d3a;
-      border: none;
-      padding: 16px 56px;
-      border-radius: 28px;
-      font-weight: 700;
-      font-size: 1.1rem;
-      color: #fff;
-      cursor: pointer;
-      user-select: none;
-      transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.15s ease;
-      align-self: center;
-      box-shadow: 0 3px 9px rgba(42, 77, 58, 0.35);
-    }
-
-    .logout-btn:hover,
-    .logout-btn:focus {
-      background: #1f3a2a;
-      box-shadow: 0 5px 14px rgba(31, 58, 42, 0.5);
-      outline: none;
-      transform: translateY(-3px);
-    }
-
-    .logout-btn:focus-visible {
-      outline: 3px solid #1f3a2a;
-      outline-offset: 3px;
-    }
-
-    /* Modal Overlay */
-    .modal-overlay {
-      position: fixed;
-      inset: 0;
-      background-color: rgba(42, 77, 58, 0.45);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      padding: 32px 20px;
-      z-index: 1100;
-      backdrop-filter: blur(6px);
-      transition: opacity 0.3s ease;
-    }
-
-    .modal-overlay.active {
-      display: flex;
-      opacity: 1;
-    }
-
-    /* Modal Window */
-    .modal {
-      background-color: #fff;
-      border-radius: 14px;
-      width: 100%;
-      max-width: 480px;
-      max-height: 90vh;
-      overflow-y: auto;
-      padding: 48px 44px 56px;
-      position: relative;
-      color: #2e3e2f;
-      font-size: 1rem;
-      box-shadow: 0 12px 32px rgba(46, 62, 47, 0.15);
-      scroll-behavior: smooth;
-    }
-
-    .modal h2 {
-      margin: 0 0 36px;
-      font-size: 2rem;
-      font-weight: 700;
-      color: #3a7d44;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 0.14em;
-      user-select: none;
-    }
-
-    .close-modal-btn {
-      position: absolute;
-      top: 18px;
-      right: 22px;
-      background: transparent;
-      border: none;
-      font-size: 2.2rem;
-      font-weight: 700;
-      color: #3a7d44;
-      cursor: pointer;
-      user-select: none;
-      transition: color 0.25s ease;
-      line-height: 1;
-    }
-
-    .close-modal-btn:hover,
-    .close-modal-btn:focus {
-      color: #1f3a2a;
-      outline: none;
-    }
-
-    .close-modal-btn:focus-visible {
-      outline: 3px solid #1f3a2a;
-      outline-offset: 3px;
-    }
-
-    /* Form */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
-    }
-
-    label {
-      font-weight: 600;
-      color: #4b5c4a;
-      letter-spacing: 0.06em;
-      user-select: none;
-      font-size: 1rem;
-    }
-
-    input[type="text"],
-    textarea {
-      padding: 16px 18px;
-      border-radius: 12px;
-      border: 1.5px solid #cbd5d1;
-      font-size: 1rem;
-      font-family: inherit;
-      color: #2e3e2f;
-      resize: vertical;
-      min-height: 48px;
-      transition: border-color 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.07);
-      outline-offset: 2px;
-    }
-
-    input[type="text"]:focus,
-    textarea:focus {
-      border-color: #3a7d44;
-      outline: none;
-      box-shadow: 0 0 16px rgba(58, 125, 68, 0.35);
-      background-color: #fff;
-    }
-
-    input[readonly] {
-      background-color: #f6f8f6;
-      border-color: #a3b5a8;
-      cursor: default;
-      color: #71806d;
-      box-shadow: none;
-    }
-
-    button[type="submit"] {
-      background: #2a4d3a;
-      border: none;
-      padding: 18px 0;
-      border-radius: 28px;
-      font-weight: 700;
-      font-size: 1.2rem;
-      color: #fff;
-      cursor: pointer;
-      letter-spacing: 0.12em;
-      text-transform: uppercase;
-      user-select: none;
-      transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.15s ease;
-      margin-top: 4px;
-      box-shadow: 0 6px 16px rgba(42, 77, 58, 0.35);
-      align-self: stretch;
-    }
-
-    button[type="submit"]:hover,
-    button[type="submit"]:focus {
-      background: #1f3a2a;
-      box-shadow: 0 8px 20px rgba(31, 58, 42, 0.5);
-      transform: translateY(-3px);
-      outline: none;
-    }
-
-    button[type="submit"]:focus-visible {
-      outline: 3px solid #1f3a2a;
-      outline-offset: 3px;
-    }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      main {
-        padding: 36px 24px 40px;
-        border-radius: 12px;
-        box-shadow: 0 6px 18px rgba(46, 62, 47, 0.08);
-      }
-
-      h1 {
-        font-size: 2rem;
-        letter-spacing: 0.1em;
-      }
-
-      .dashboards {
-        grid-template-columns: 1fr;
-        gap: 22px;
-      }
-
-      .dashboards a {
-        font-size: 1.1rem;
-        padding: 18px 22px;
-      }
-
-      .dashboards a::before {
-        font-size: 1.4rem;
-        margin-right: 10px;
-      }
-
-      #openModalBtn {
-        padding: 14px 48px;
-        font-size: 1.1rem;
-        margin-bottom: 40px;
-      }
-
-      .logout-btn {
-        font-size: 1rem;
-        padding: 14px 48px;
-      }
-
-      .modal {
-        padding: 36px 32px 40px;
-        max-height: 85vh;
-      }
 
       .modal h2 {
         font-size: 1.7rem;
@@ -714,4 +702,5 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
