--- a/incident-report.html
+++ b/incident-report.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KPI Dashboards Menu</title>
   <style>
-/* Reset & Base */
+/* Base Reset */
 *,
 *::before,
 *::after {
@@ -15,94 +15,95 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: #f0f3f2;
-  color: #2e3e2f;
-  min-height: 100vh;
+  background: #f4f6f8;
+  color: #2d2d2d;
   display: flex;
   justify-content: center;
   padding: 60px 20px 40px;
+  min-height: 100vh;
 }
 
+/* Main Card */
 main {
-  background: #fff;
+  background: #ffffff;
   max-width: 880px;
   width: 100%;
   padding: 48px 40px;
-  border-radius: 16px;
-  box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
+/* Header */
 header h1 {
-  font-size: 2.2rem;
-  font-weight: 700;
-  color: #2a4d3a;
+  font-size: 2rem;
+  font-weight: 600;
+  color: #1a202c;
   text-align: center;
   margin-bottom: 8px;
-  letter-spacing: 0.04em;
 }
 
-/* Section Styling */
+/* Section */
 section {
   font-size: 1rem;
   line-height: 1.6;
-  color: #3e4e3f;
 }
 
 section h2 {
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
-  color: #2a4d3a;
+  color: #2c5282;
 }
 
-/* Button: Report */
+ul {
+  padding-left: 1.2rem;
+  list-style: disc;
+}
+
+/* Primary Button */
 #reportBtn {
-  background: #3a7d44;
-  color: white;
-  padding: 12px 32px;
+  background: #2b6cb0;
+  color: #fff;
+  padding: 12px 28px;
   border: none;
-  border-radius: 28px;
+  border-radius: 6px;
   font-weight: 600;
   font-size: 1rem;
-  letter-spacing: 0.05em;
   cursor: pointer;
   transition: background 0.3s ease, transform 0.15s ease;
-  box-shadow: 0 4px 12px rgba(58, 125, 68, 0.3);
 }
 
 #reportBtn:hover {
-  background: #2a5931;
-  transform: translateY(-2px);
+  background: #2c5282;
+  transform: translateY(-1px);
 }
 
-/* Logout */
+/* Logout Button */
 .logout-btn {
-  background: #f44336;
+  background: #e53e3e;
   color: white;
-  border: none;
   padding: 12px 28px;
   font-weight: 600;
   font-size: 1rem;
-  border-radius: 30px;
+  border-radius: 6px;
+  border: none;
   align-self: center;
   cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  transition: background 0.3s ease, transform 0.2s ease;
+  transition: background 0.3s ease;
 }
 
 .logout-btn:hover {
-  background: #d32f2f;
-  transform: translateY(-2px);
+  background: #c53030;
 }
 
 /* Modal Overlay */
 .modal-overlay {
   position: fixed;
   inset: 0;
-  background-color: rgba(42, 77, 58, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   display: none;
   justify-content: center;
   align-items: center;
@@ -117,141 +118,137 @@ section h2 {
 
 /* Modal Box */
 .modal {
-  background-color: #ffffff;
-  border-radius: 16px;
+  background: #fff;
+  border-radius: 10px;
+  max-width: 520px;
   width: 100%;
-  max-width: 500px;
-  max-height: 90vh;
-  overflow-y: auto;
-  padding: 36px 32px;
+  padding: 32px;
   position: relative;
   box-shadow: 0 12px 32px rgba(0, 0, 0, 0.15);
 }
 
 .modal h2 {
-  font-size: 1.6rem;
-  font-weight: 700;
-  color: #3a7d44;
+  font-size: 1.5rem;
+  font-weight: 600;
   text-align: center;
+  color: #2b6cb0;
   margin-bottom: 24px;
 }
 
 /* Close Button */
 .close-modal-btn {
   position: absolute;
-  top: 14px;
-  right: 20px;
+  top: 12px;
+  right: 16px;
   background: none;
   border: none;
-  font-size: 1.8rem;
-  color: #3a7d44;
+  font-size: 1.6rem;
+  color: #4a5568;
   cursor: pointer;
-  transition: color 0.2s ease;
 }
 
 .close-modal-btn:hover {
-  color: #1f3a2a;
+  color: #2d3748;
 }
 
-/* Form Fields */
+/* Form Styling */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  font-size: 0.95rem;
+}
+
 form label {
   font-weight: 600;
-  font-size: 0.95rem;
-  color: #4a5e4a;
   margin-bottom: 6px;
-  display: inline-block;
+  display: block;
 }
 
 input[type="text"],
 textarea {
-  padding: 12px 14px;
-  border-radius: 10px;
-  border: 1.5px solid #cbd5d1;
   width: 100%;
+  padding: 10px 12px;
+  border: 1px solid #cbd5e0;
+  border-radius: 6px;
+  background: #fff;
   font-size: 1rem;
-  background: #fdfdfd;
-  transition: all 0.3s ease;
+  transition: border-color 0.3s ease;
 }
 
-input:focus,
+input[type="text"]:focus,
 textarea:focus {
-  border-color: #3a7d44;
-  box-shadow: 0 0 8px rgba(58, 125, 68, 0.3);
+  border-color: #2b6cb0;
   outline: none;
 }
 
+/* Readonly Input */
 input[readonly] {
-  background-color: #f4f7f5;
-  color: #6b7a6a;
+  background-color: #edf2f7;
+  color: #4a5568;
+  cursor: not-allowed;
 }
 
 /* Submit Button */
 form button[type="submit"] {
-  background: #3a7d44;
+  background: #2b6cb0;
   color: white;
-  border: none;
-  padding: 14px;
+  padding: 12px;
   font-weight: 600;
   font-size: 1rem;
-  border-radius: 30px;
-  margin-top: 10px;
+  border: none;
+  border-radius: 6px;
   cursor: pointer;
-  box-shadow: 0 4px 14px rgba(58, 125, 68, 0.35);
-  transition: background 0.3s ease, transform 0.2s ease;
+  transition: background 0.3s ease;
 }
 
 form button[type="submit"]:hover {
-  background: #2a5931;
-  transform: translateY(-2px);
+  background: #2c5282;
 }
 
-/* Capture Image Area */
+/* Capture Image */
 video,
 img {
   width: 100%;
   max-height: 300px;
   object-fit: cover;
-  border-radius: 12px;
-  margin-bottom: 10px;
+  border-radius: 8px;
+  margin-bottom: 12px;
 }
 
 #captureBtn,
 #retakeBtn {
-  background: #3a7d44;
+  background: #2b6cb0;
   color: white;
-  border: none;
   padding: 10px 22px;
   font-weight: 600;
-  border-radius: 24px;
+  border: none;
+  border-radius: 6px;
   cursor: pointer;
-  transition: background 0.3s ease, transform 0.15s ease;
+  transition: background 0.3s ease;
 }
 
 #retakeBtn {
-  background: #607d3b;
+  background: #718096;
 }
 
 #captureBtn:hover,
 #retakeBtn:hover {
-  transform: translateY(-2px);
+  background: #2c5282;
 }
 
 /* Responsive */
 @media (max-width: 600px) {
   main {
-    padding: 32px 24px;
+    padding: 28px 20px;
   }
 
   header h1 {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
   }
 
   .modal {
     padding: 24px;
-  }
-
-  .modal h2 {
-    font-size: 1.4rem;
   }
 
   .logout-btn,
@@ -259,57 +256,6 @@ img {
     width: 100%;
   }
 }
-
-
-
-      .modal h2 {
-        font-size: 1.7rem;
-        margin-bottom: 30px;
-      }
-
-      form {
-        gap: 20px;
-      }
-    }
-
-    video, img {
-      max-width: 300px;
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    #captureBtn, #retakeBtn {
-  background: #3a7d44;
-  border: none;
-  padding: 12px 36px;
-  border-radius: 28px;
-  color: #fff;
-  font-weight: 700;
-  font-size: 1rem;
-  letter-spacing: 0.12em;
-  text-transform: uppercase;
-  cursor: pointer;
-  user-select: none;
-  transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.15s ease;
-  box-shadow: 0 4px 12px rgba(58, 125, 68, 0.4);
-  margin-right: 10px;
-}
-
-#captureBtn:hover, #retakeBtn:hover,
-#captureBtn:focus, #retakeBtn:focus {
-  background: #2a5931;
-  box-shadow: 0 6px 16px rgba(42, 89, 49, 0.5);
-  outline: none;
-  transform: translateY(-3px);
-}
-
-#captureBtn:focus-visible, #retakeBtn:focus-visible {
-  outline: 3px solid #2a5931;
-  outline-offset: 3px;
-}
-
-
-
 
 
 
@@ -702,5 +648,6 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
