--- a/incident-report.html
+++ b/incident-report.html
@@ -301,13 +301,14 @@ img {
     <p>Please provide as much detail as possible when submitting an incident to ensure timely resolution.</p>
   </section>
 
-  <div class="mt-4">
+  <div class="button-row">
     <button 
       id="reportBtn"
       class="px-4 py-2 bg-indigo-600 text-sm font-medium text-white rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-1 transition duration-200"
     >
       Report an Incident
     </button>
+    <button id="logoutBtn" class="logout-btn">Logout</button>
   </div>
 
   <!-- Modal Section -->
@@ -424,7 +425,8 @@ img {
     </div>
   </div>
 
-  <button id="logoutBtn" class="logout-btn">Logout</button>
+
+
 
 </main>
 
@@ -665,6 +667,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
