--- a/incident-report.html
+++ b/incident-report.html
@@ -50,11 +50,15 @@ section {
   color: #3e4e3f;
 }
 
+header h1 {
+  font-size: 2.4rem;
+  line-height: 1.3;
+  margin-bottom: 0.75rem;
+}
+
 section h2 {
-  font-size: 1.1rem;
-  font-weight: 600;
+  font-size: 1.25rem;
   margin-bottom: 0.5rem;
-  color: #2a4d3a;
 }
 
 /* ===== Buttons ===== */
@@ -273,6 +277,20 @@ img {
   }
 }
 
+.button-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+  margin-top: 24px;
+}
+
+@media (min-width: 640px) {
+  .button-column {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
 
 
 
@@ -301,15 +319,21 @@ img {
     <p>Please provide as much detail as possible when submitting an incident to ensure timely resolution.</p>
   </section>
 
-  <div class="button-row">
-    <button 
-      id="reportBtn"
-      class="px-4 py-2 bg-indigo-600 text-sm font-medium text-white rounded-md shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-1 transition duration-200"
-    >
-      Report an Incident
-    </button>
-    <button id="logoutBtn" class="logout-btn">Logout</button>
-  </div>
+ <div class="button-column">
+  <button 
+    id="reportBtn"
+    class="px-5 py-3 bg-green-700 text-white text-sm font-semibold rounded-full shadow-md hover:bg-green-800 transition"
+  >
+    Report an Incident
+  </button>
+  <button 
+    id="logoutBtn"
+    class="px-5 py-3 bg-red-600 text-white text-sm font-semibold rounded-full shadow-md hover:bg-red-700 transition"
+  >
+    Logout
+  </button>
+</div>
+
 
   <!-- Modal Section -->
   <div class="modal-overlay" id="incidentModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" tabindex="-1">
@@ -667,6 +691,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
