--- a/incident-report.html
+++ b/incident-report.html
@@ -309,16 +309,14 @@ img {
   z-index: 1000;
 }
 
-.top-logo {
-  height: 30px;
-}
-
-/* Floating logo and logout button */
 .logo-top-left {
   position: fixed;
   top: 20px;
   left: 20px;
-  height: 40px; /* smaller size */
+  height: 32px; /* smaller size */
+  object-fit: contain;
+  padding: 0;
+  margin: 0;
   z-index: 1000;
 }
 
@@ -736,6 +734,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
