--- a/incident-report.html
+++ b/incident-report.html
@@ -30,7 +30,6 @@ main {
   background: #fff;
   max-width: 880px;
   width: 100%;
-  padding: 48px 40px;
   border-radius: 16px;
   box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
   margin: auto;
@@ -311,14 +310,15 @@ img {
 
 .logo-top-left {
   position: fixed;
-  top: 20px;
-  left: 20px;
-  height: 32px; /* smaller size */
+  top: 16px;
+  left: 8px;         /* More to the left */
+  height: 24px;      /* Smaller size */
   object-fit: contain;
   padding: 0;
   margin: 0;
   z-index: 1000;
 }
+
 
 .logout-btn-top-right {
   position: fixed;
@@ -734,6 +734,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
