--- a/incident-report.html
+++ b/incident-report.html
@@ -12,7 +12,7 @@
 
 body {
   margin: 0;
-  padding-top: 20px; /* below top-bar */
+  padding: 40px 20px 40px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #f0f3f2;
   color: #2e3e2f;
@@ -21,7 +21,6 @@ body {
   align-items: center;
   justify-content: center;
   line-height: 1.6;
-  padding-top: 100px;
 }
 
 
@@ -311,6 +310,8 @@ img {
 
 .logo-top-left {
   position: fixed;
+  top: 16px;
+  left: 8px;         /* More to the left */
   height: 24px;      /* Smaller size */
   object-fit: contain;
   padding: 0;
@@ -733,6 +734,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
