--- a/incident-report.html
+++ b/incident-report.html
@@ -313,6 +313,7 @@ img {
   top: 16px;
   left: 8px;         /* More to the left */
   height: 24px;      /* Smaller size */
+  width: auto; /* ensures width auto adjusts to height */
   object-fit: contain;
   padding: 0;
   margin: 0;
@@ -734,6 +735,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
