--- a/incident-report.html
+++ b/incident-report.html
@@ -311,12 +311,8 @@ img {
 .logo-top-left {
   position: fixed;
   top: 16px;
-  left: 8px;         /* More to the left */
-  height: 24px;      /* Smaller size */
-  width: auto; /* ensures width auto adjusts to height */
-  object-fit: contain;
-  padding: 0;
-  margin: 0;
+  right: 10px;         /* More to the left */
+  height: 24px;      
   z-index: 1000;
 }
 
@@ -735,6 +731,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
