--- a/incident-report.html
+++ b/incident-report.html
@@ -311,10 +311,11 @@ img {
 .logo-top-left {
   position: fixed;
   top: 16px;
-  right: 10px;         /* More to the left */
-  height: 24px;      
-  z-index: 1000;
+  right: 8px;
+  height: 24px;      /* sets height */
+  object-fit: contain;
 }
+
 
 
 .logout-btn-top-right {
@@ -731,6 +732,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
