--- a/incident-report.html
+++ b/incident-report.html
@@ -311,7 +311,7 @@ img {
 .logo-top-left {
   position: fixed;
   top: 16px;
-  right: 8px;
+  left: 8px;
   height: 24px;      /* sets height */
   object-fit: contain;
 }
@@ -732,6 +732,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
