--- a/incident-report.html
+++ b/incident-report.html
@@ -342,7 +342,7 @@ img {
 </head>
 <body>
 
-<img src="zong.png" alt="Zong Logo" class="logo-top-left" />
+<img src="zong.png" alt="Zong Logo" class="logo-top-left" width="100" height="24" />
 <button id="logoutBtn" class="logout-btn-top-right">Logout</button>
 
 <main class="max-w-3xl mx-auto px-4 py-6">
@@ -732,6 +732,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
