--- a/incident-report.html
+++ b/incident-report.html
@@ -312,6 +312,7 @@ img {
   position: fixed;
   top: 16px;
   left: 10px;
+  right: 10px;
   height: 24px;      /* sets height */
   object-fit: contain;
 }
@@ -732,6 +733,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
