--- a/incident-report.html
+++ b/incident-report.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KPI Dashboards Menu</title>
+  <title>Report An Incident</title>
   <style>
 /* ===== Reset & Base Styles ===== */
 *, *::before, *::after {
@@ -760,6 +760,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
