--- a/incident-report.html
+++ b/incident-report.html
@@ -623,15 +623,38 @@ const usernameInput = document.getElementById("username");
     return;
   }
 
-  // If user uploaded images but they're not finished uploading yet
   const files = Array.from(uploadInput.files);
-  const previewImages = previewContainer.querySelectorAll("img");
-  
-  // If uploaded images exist but no URLs saved yet, wait for uploads
-  if (files.length > 0 && uploadedImageUrls.length < files.length) {
-    alert("Please wait for all images to finish uploading...");
+
+// Upload each file if not uploaded yet
+if (files.length > 0) {
+  uploadedImageUrls = []; // Reset
+  const uploadPromises = files.map(file => {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onload = async function (e) {
+        const dataUrl = e.target.result;
+        const uploadedUrl = await uploadToImgbb(dataUrl, loggedInUser);
+        if (uploadedUrl) {
+          resolve(uploadedUrl);
+        } else {
+          reject("Upload failed");
+        }
+      };
+      reader.onerror = () => reject("File read failed");
+      reader.readAsDataURL(file);
+    });
+  });
+
+  try {
+    const urls = await Promise.all(uploadPromises);
+    uploadedImageUrls = urls;
+    imgUrlInput.value = urls.join(",");
+  } catch (error) {
+    alert("One or more image uploads failed. Please try again.");
     return;
   }
+}
+
 
   // If camera was used and an imageDataURL exists but no ImgBB URL
   if (canvas.style.display === "block" && imageDataURL && imgUrlInput.value.trim() === "") {
@@ -786,6 +809,7 @@ if (logoutBtn) {
 </body>
 
 </html>
+
 
 
 
